[project @ 2006-02-21 20:37:50 by rlubke]  - Fix for issue 243 (needs to be backported to JSF_1_1_ROLLING)  - Minor performance enhancement
SECTION: Modified Files
A jsf-ri/src/com/sun/faces/io/FastStringWriter.java
 - Add StringWriter backed by StringBuilder.
   Simple tests show a modest improvement doing so.

M jsf-ri/src/com/sun/faces/application/ViewHandlerImpl.java
M jsf-ri/src/com/sun/faces/util/DebugUtil.java
 - make use of FastStringWriter

M jsf-ri/src/com/sun/faces/config/ManagedBeanFactoryImpl.java
 - (Issue 243) follow JSP spec for converting String to numeric types.
   If String value has zero length, then the numeric value
   should be 0.
 - leverage varargs in message calls

M jsf-ri/test/com/sun/faces/config/TestManagedBeanFactory.java
 - Update test to validate the above ManagedBeanFactoryImpl change

Issue number: 243
Reviewed by:  edburns

Original author: rlubke
Date: 2006-02-21 20:37:51+00:00

git-svn-id: https://svn.java.net/svn/mojarra~svn/trunk@3577 761efcf2-d34d-6b61-9145-99dcacc3edf1